--- a/publican/datadir/Common_Content/common/ta-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/ta-IN/Conventions.po
@@ -204,7 +204,7 @@ msgid ""
 msgstr ""
 "<application>gedit</application> கோப்பில் சிறப்பு எழுத்துக்களை நுழைக்க, <menuchoice>"
 "<guimenu>நிரல்கள் </guimenu><guisubmenu> துணைப்பொருட்களை </"
-"guisubmenu><guimenuitem> எழுத்துரு மேப்<</guimenuitem></menuchoice> என்பதை முதன்மை மெனு "
+"guisubmenu><guimenuitem> எழுத்துரு மேப்</guimenuitem></menuchoice> என்பதை முதன்மை மெனு "
 "பட்டியிலிருந்து தேர்ந்தெடுக்கவும். அடுத்து <menuchoice><guimenu>தேடு </guimenu><"
 "guimenuitem> கண்டுபிடி&hellip;</guimenuitem></menuchoice> என்பதை <application>எழுத்துரு "
 "மேப்</application> மெனு பட்டியில் "
