--- a/publican/datadir/Common_Content/common/fr-FR/Conventions.po
+++ b/publican/datadir/Common_Content/common/fr-FR/Conventions.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2009-12-02 17:34+1000\n"
+"PO-Revision-Date: 2009-12-04 16:52+1000\n"
 "Last-Translator: Sam Friedmann <sam.friedmann@redhat.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -191,7 +191,7 @@ msgid ""
 "then click the <guibutton>Copy</guibutton> button. Now switch back to your "
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
-msgstr "Pour insérer un caractère spécial dans un fichier <application>gedit</application>, choisir <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> à partir de la barre du menu principal. Ensuite, sélectionner <menuchoice><guimenu>Search</guimenu><guimenuitem> Find&hellip; à partir </guimenuitem></menuchoice>de la barre de menu <application>Character Map</application>, taper le nom du caractère dans le champ <guilabel>Search</guilabel> et cliquer sur <guibutton>Next</guibutton>. Le caractère que vous cherchiez sera surligné dans la <guilabel>Character Map</guilabel> (Table de caractères). Double-cliquez sur ce caractère surligné pour l'insérer dans le champ <guilabel>Text to copy</guilabel> (texte à copier), puis cliquer sur le bouton <guibutton>Copy</guibutton> (copier) . Maintenant, revenez à votre document, et sélectionnez <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> à partir de la barre de menu <application>gedit</application>."
+msgstr "Pour insérer un caractère spécial dans un fichier <application>gedit</application>, choisir <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> à partir de la barre du menu principal. Ensuite, sélectionner <menuchoice><guimenu>Search</guimenu><guimenuitem> Find&hellip;</guimenuitem></menuchoice> à partir de la barre de menu <application>Character Map</application>, taper le nom du caractère dans le champ <guilabel>Search</guilabel> et cliquer sur <guibutton>Next</guibutton>. Le caractère que vous cherchiez sera surligné dans la <guilabel>Character Map</guilabel> (Table de caractères). Double-cliquez sur ce caractère surligné pour l'insérer dans le champ <guilabel>Text to copy</guilabel> (texte à copier), puis cliquer sur le bouton <guibutton>Copy</guibutton> (copier) . Maintenant, revenez à votre document, et sélectionnez <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice> à partir de la barre de menu <application>gedit</application>."
 
 #. Tag: para
 #, no-c-format
