Update Polish translation of Common Content
git-svn-id: file:///srv/svn/publican/trunk@929 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/pl-PL/Conventions.po
+++ b/publican/datadir/Common_Content/common/pl-PL/Conventions.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2009-10-03 22:48+0200\n"
+"PO-Revision-Date: 2009-12-04 20:27+0100\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <fedora-trans-pl@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -175,7 +175,7 @@ msgstr ""
 "wyboru, tytuły w menu i podmenu. Na przykład:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -185,15 +185,16 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"Proszę wybrać <guimenu>System &#62; Preferencje &#62; Mysz</guimenu> z "
-"głównego meny panelu, aby uruchomić <application>Preferencje myszy</"
-"application>. W karcie <guilabel>Przyciski</guilabel> należy nacisnąć pole "
-"wyboru <guilabel>Dla leworęcznych</guilabel> i nacisnąć przycisk "
-"<guibutton>Zamknij</guibutton>, aby przełączyć główny przycisk myszy z "
-"lewego na prawy (umożliwiając używanie myszy lewą ręką)."
+"Proszę wybrać <menuchoice><guimenu>System</guimenu><guisubmenu>Preferencje</"
+"guisubmenu><guimenuitem>Mysz</guimenuitem></menuchoice> z głównego menu "
+"panelu, aby uruchomić <application>Preferencje myszy</application>. W karcie "
+"<guilabel>Przyciski</guilabel> należy nacisnąć pole wyboru <guilabel>Dla "
+"leworęcznych</guilabel> i nacisnąć przycisk <guibutton>Zamknij</guibutton>, "
+"aby przełączyć główny przycisk myszy z lewego na prawy (umożliwiając "
+"używanie myszy lewą ręką)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -210,17 +211,19 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "Aby umieścić specjalny znak w pliku programu <application>gedit</"
-"application>, należy wybrać <guimenu>Aplikacje &#62; Akcesoria &#62; Mapa "
-"znaków</guimenu> z głównego menu panelu. Następnie należy wybrać "
-"<guimenu>Znajdź &#62; Znajdź&hellip;</guimenu> z paska menu "
-"<application>Mapy znaków</application>, podać nazwę znaku w polu "
-"<guilabel>Znajdź</guilabel> i nacisnąć przycisk <guibutton>Dalej</"
-"guibutton>. Wyszukiwany znak zostanie wyróżniony w <guilabel>Tablicy znaków</"
-"guilabel>. Podwójne naciśnięcie wyróżnionego znaku umieści go w polu "
-"<guilabel>Tekst do skopiowania</guilabel>. Następnie należy nacisnąć "
-"przycisk <guibutton>Skopiuj</guibutton>. Teraz należy przełączyć się z "
-"powrotem na dokument i wybrać <guimenu>Edycja &#62; Wklej</guimenu> z paska "
-"menu programu <application>gedit</application>."
+"application>, należy wybrać <menuchoice><guimenu>Programy</"
+"guimenu><guisubmenu>Akcesoria</guisubmenu><guimenuitem>Mapa znaków</"
+"guimenuitem></menuchoice> z głównego menu panelu. Następnie należy wybrać "
+"<menuchoice><guimenu>Znajdź</guimenu><guimenuitem>Znajdź&hellip;</"
+"guimenuitem></menuchoice> z paska menu <application>Mapy znaków</"
+"application>, podać nazwę znaku w polu <guilabel>Znajdź</guilabel> i "
+"nacisnąć przycisk <guibutton>Dalej</guibutton>. Wyszukiwany znak zostanie "
+"wyróżniony w <guilabel>Tablicy znaków</guilabel>. Podwójne naciśnięcie "
+"wyróżnionego znaku umieści go w polu <guilabel>Tekst do skopiowania</"
+"guilabel>. Następnie należy nacisnąć przycisk <guibutton>Skopiuj</"
+"guibutton>. Teraz należy przełączyć się z powrotem na dokument i wybrać "
+"<menuchoice><guimenu>Edycja</guimenu><guimenuitem>Wklej</guimenuitem></"
+"menuchoice> z paska menu programu <application>gedit</application>."
 
 #. Tag: para
 #, no-c-format
@@ -325,6 +328,8 @@ msgstr ""
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
 msgstr ""
+"Publican jest systemem publikowania opartym na formacie <firstterm>DocBook</"
+"firstterm>."
 
 #. Tag: title
 #, no-c-format
@@ -396,18 +401,18 @@ msgid "Important"
 msgstr "Ważne"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
-"Pole ważne przedstawiają szczegóły, które mogłyby zostać łatwo pominięte: "
-"zmiany konfiguracji mające zastosowanie tylko w bieżącej sesji lub usługa "
-"wymagająca ponownego uruchomienia przed uwzględnieniem aktualizacji. "
-"Zignorowanie pól ważne nie spowoduje utraty danych, ale może wywołać "
-"irytację lub frustrację."
+"Pole \"Ważne\" przedstawiają szczegóły, które mogłyby zostać łatwo "
+"pominięte: zmiany konfiguracji mające zastosowanie tylko w bieżącej sesji "
+"lub usługa wymagająca ponownego uruchomienia przed uwzględnieniem "
+"aktualizacji. Zignorowanie pól \"Ważne\" nie spowoduje utraty danych, ale "
+"może wywołać irytację lub frustrację."
 
 #. Tag: title
 #, no-c-format
@@ -422,35 +427,3 @@ msgid ""
 msgstr ""
 "Ostrzeżenia nie powinny być ignorowane. Zignorowanie ostrzeżeń "
 "najprawdopodobniej spowoduje utratę danych."
-
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "Proszę zauważyć znak <guimenu>&#62;</guimenu>, używany do wskazania "
-#~ "przejścia między menu a podmenu. Dzięki temu można uniknąć trudnej do "
-#~ "zrozumienia formy &#39;Proszę wybrać <guimenuitem>Mysz</guimenuitem> z "
-#~ "podmenu <guimenu>Preferencje</guimenu> w menu <guimenu>System</guimenu> "
-#~ "głównego menu panelu&#39;."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "Kiedy serwer HTTP Apache akceptuje żądania, rozdziela procesy potomne lub "
-#~ "wątki, aby je obsłużyć. Ta grupa procesów potomnych lub wątków jest znana "
-#~ "jako <firstterm>pula-serwera</firstterm>. W serwerze HTTP Apache 2.0, "
-#~ "odpowiedzialność za tworzenie i zarządzanie tymi pulami-serwera została "
-#~ "umieszczona w grupie modułów o nazwie <firstterm>Moduły wielokrotnego "
-#~ "przetwarzania</firstterm> (<firstterm>MPM</firstterm>). Inaczej niż inne "
-#~ "moduły, tylko jeden moduł z grupy MPM może być wczytywany przez serwer "
-#~ "HTTP Apache."
