Update Bulgarian translation of Common Content
git-svn-id: file:///srv/svn/publican/trunk@930 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/bg-BG/Conventions.po
+++ b/publican/datadir/Common_Content/common/bg-BG/Conventions.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: 0.44\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2009-10-13 23:08+0300\n"
+"PO-Revision-Date: 2009-12-07 01:59-0500\n"
 "Last-Translator: Martin Stefanov <f0x1@mail.bg>\n"
 "Language-Team: Bulgarian <f0x1@mail.bg>\n"
 "MIME-Version: 1.0\n"
@@ -60,19 +60,19 @@ msgstr ""
 "фрази. Това са:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "Сбито Удебеляване"
+msgstr "<literal>Сбито Удебеляване</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
 "Използва се за посочване на системно въвждане, включително и конзолни "
-"команди, имена на файлове и пътя до тях, имена на клавиши или комбинация от "
-"клавиши. Например:"
+"команди, имена на файлове и пътя до тях. Използва се също за посочване на "
+"имена на клавиши или комбинация от клавиши. Например:"
 
 #. Tag: para
 #, no-c-format
@@ -88,16 +88,16 @@ msgstr ""
 "keycap>."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
-"Примерът включва име на файл, команда и име на клавиш, всичките показани в "
-"Сбито Удебеляване и различими в контекста."
+"Горният пример включва име на файл, команда и име на клавиш, всичките "
+"показани в сбито удебеляване и различими в контекста."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -124,18 +124,18 @@ msgstr ""
 "keycap></keycombo>, за да се върнете до X-Windows сесията."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
 "Първото изречение посочва конкретния клавиш, който трябва да се натисне. "
-"Второто посочва два набора от три клавиша, всеки един от които трябва да се "
-"натисне едновременно с другите."
+"Второто посочва два набора (от три клавиша, всеки един от които трябва да се "
+"натисне едновременно с другите)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -143,7 +143,7 @@ msgid ""
 msgstr ""
 "Ако се обсъждат програмни кодове, класове, методи, функции, променливи и "
 "връщани стойности, споменати в един абзац, то те ще бъдат представени като "
-"по-горе, в <literal>Сбито Удебеляване</literal>. Например:"
+"по-горе, в <literal>сбито удебеляване</literal>. Например:"
 
 #. Tag: para
 #, no-c-format
@@ -161,10 +161,10 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Пропорционално Удебеляване</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
@@ -176,7 +176,7 @@ msgstr ""
 "подменюта. Например:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -186,15 +186,16 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"Изберете <guimenu>Система > Предпочитания > Мишка</guimenu> от бутона за "
-"главното меню <application>Предпочитания към Мишка</application>. В "
-"табулатора <guilabel>Бутони</guilabel> , щракнете на тик-кутията "
-"<guilabel>Мишка за лява ръка </guilabel> и след това <guibutton>Затвори</"
-"guibutton> , за да размените местата на левия и десния бутон(режим,подходящ "
-"за левичари)."
+"Изберете <menuchoice><guimenu>Система</guimenu><guisubmenu>Предпочитания</"
+"guisubmenu><guimenuitem>Мишка</guimenuitem></menuchoice> от бутона за "
+"главното меню, за да стартирате <application>Предпочитания към Мишка</"
+"application>. В табулатора <guilabel>Бутони</guilabel> , щракнете на тик-"
+"кутията <guilabel>Мишка за лява ръка </guilabel> и след това "
+"<guibutton>Затвори</guibutton> , за да размените местата на левия и десния "
+"бутон(режим,подходящ за левичари)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -211,19 +212,21 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "За да вмъкнете специален символ в <application>gedit</application> файл, "
-"изберете <guimenu>Приложения > Аксесоари > Таблица със знаци</guimenu> от "
-"бутона за главното меню. След това изберете <guimenu>Търсене > Намери;</"
-"guimenu> от менюто на  <application>Таблица със знаци</application> , "
-"напишете името на символа в полето  <guilabel>Търсене</guilabel> и натиснете "
-"<guibutton>Следващ</guibutton>. Символът,който търсехте ще бъде посочен в "
-"<guilabel>Таблицата със знаци</guilabel>. Двойно щракване върху посочения "
-"символ ще го постави в полето <guilabel>Текст за копиране</guilabel> след "
-"това кликнете на бутона  <guibutton>Копирай</guibutton>  Сега се върнете "
-"обратно в документа и изберете <guimenu>Редактирай > Постави</guimenu> от "
-"менюто на <application>gedit</application> ."
+"изберете <menuchoice><guimenu>Приложения</guimenu><guisubmenu>Аксесоари</"
+"guisubmenu><guimenuitem>Таблица със знаци</guimenuitem></menuchoice> от "
+"бутона за главното меню. След това изберете <menuchoice><guimenu>Търсене</"
+"guimenu><guimenuitem>Намери;</guimenuitem></menuchoice> от менюто на "
+"<application>Таблица със знаци</application> , напишете името на символа в "
+"полето  <guilabel>Търсене</guilabel> и натиснете <guibutton>Следващ</"
+"guibutton>. Символът,който търсите ще бъде посочен в <guilabel>Таблицата със "
+"знаци</guilabel>. Двойно щракване върху посочения символ ще го постави в "
+"полето <guilabel>Текст за копиране</guilabel> след това кликнете на бутона  "
+"<guibutton>Копирай</guibutton>  Сега се върнете обратно в документа и "
+"изберете <menuchoice><guimenu>Редактирай</guimenu><guimenuitem>Постави</"
+"guimenuitem></menuchoice> от менюто на <application>gedit</application> ."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -231,9 +234,9 @@ msgid ""
 "context."
 msgstr ""
 "Текстът по-горе включва имена на приложения; имена на системни менюта и "
-"обекти; имена на програмни менюта; бутони и текст в потребителски интерфейс, "
-"всички представени в Пропорционално Удебеляване и всички различими в "
-"контекста."
+"обекти; имена на програмни менюта; и бутони и текст в потребителски "
+"интерфейс, всички представени в пропорционално удебеляване и всички "
+"различими в контекста."
 
 #. Tag: para
 #, no-c-format
@@ -247,15 +250,15 @@ msgstr ""
 "replaceable></application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"Прибавянето на 'Ръкописно' към Сбито Удебеляване и Пропорционално "
-"Удебеляване предполага заместим или вариращ текст. 'Ръкописно' означава, че "
+"Прибавянето на 'ръкописно' към сбито удебеляване и пропорционално "
+"удебеляване предполага заместим или вариращ текст. 'ръкописно' означава, че "
 "текста не трябва да се въвежда буквално или че се променя според определени "
 "условия. Например:"
 
@@ -324,7 +327,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican е <firstterm>DocBook</firstterm> система за публикуване."
 
 #. Tag: title
 #, no-c-format
@@ -332,29 +335,30 @@ msgid "Pull-quote Conventions"
 msgstr "Практика за отделяне на различни типове"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"Два типа данни, обикновено многоредови, са отделени от заобикалящия ги текст."
+"Конзолният изход и програмният код са отделени визуално от заобикалящия ги "
+"текст."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"Изходът, изпратен до конзолата е поставен в <computeroutput>Печатно Сбито "
-"Удебеляване</computeroutput> и е представено така:"
+"Изходът, изпратен до конзолата, е поставен в <computeroutput>печатно сбито "
+"удебеляване</computeroutput> и е представено така:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"Програмният код също се поставя в <computeroutput>Печатно Сбито Удебеляване</"
+"Програмният код също се поставя в <computeroutput>печатно сбито идебеляване</"
 "computeroutput>, но се представя и отличава както следва:"
 
 #. Tag: title
@@ -377,13 +381,13 @@ msgid "Note"
 msgstr "Забележка"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"Забележката е полезен съвет или кратък път за алтернативно изпълнение на "
+"Забележките са полезен съвет или кратък път за алтернативно изпълнение на "
 "належаща задача. Пренебрегването на забележка не би трябвало да има "
 "негативни последици, но може да пропуснете трик, който би направил живота ви "
 "по-лесен."
@@ -394,14 +398,14 @@ msgid "Important"
 msgstr "Важно"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
-"Кутиите с \"Важно!\" съобщение напомнят събития, пропуснати по-рано: "
+"Кутиите с \"Важно!\" съобщение напомнят събития, които са лесно пропускани: "
 "конфигурационни промени, които засягат текущата сесия или услуги, които "
 "трябва да бъдат рестартирани преди обновление да встъпи в действие. "
 "Пренебрегване на кутия с \"Важно!\" съобщение няма да предизвика загуба на "
@@ -413,12 +417,13 @@ msgid "Warning"
 msgstr "Предупреждение"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
-"Предупрежденията не трябва да се игнорират или рискувате загуба на данни."
+"Предупрежденията не трябва да се игнорират. В противен случай най-вероятно "
+"ще бъде предизвикана загуба на данни."
 
 #~ msgid "Proportional Bold"
 #~ msgstr "Пропорционално Удебеляване"
