--- a/publican/datadir/Common_Content/common/bg-BG/Feedback.po
+++ b/publican/datadir/Common_Content/common/bg-BG/Feedback.po
@@ -1,34 +1,35 @@
-# 
-# AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Martin Stefanov <f0x1@mail.bg>, 2009
+# Automatically generated <>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
 "POT-Creation-Date: 2009-07-27T05:14:21\n"
-"PO-Revision-Date: 2009-07-27T05:14:21\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: None\n"
+"PO-Revision-Date: 2009-12-07 01:32-0500\n"
+"Last-Translator: Automatically generated <>\n"
+"Language-Team: Bulgarian <>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: application/x-publican; charset=UTF-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #. Tag: title
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr ""
+msgstr "Нуждаем се от обратна връзка!"
 
 #. Tag: primary
 #, no-c-format
 msgid "feedback"
-msgstr ""
+msgstr "обратна връзка"
 
 #. Tag: secondary
 #, no-c-format
 msgid "contact information for this manual"
-msgstr ""
+msgstr "информация за връзка относно този наръчник"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr ""
-
+"Трябва да презапишете това като създадете свой собствен Feedback.xml файл."
