--- a/publican/datadir/Common_Content/common/gu-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/gu-IN/Conventions.po
@@ -1,12 +1,12 @@
 # translation of Conventions.po to Gujarati
 # Ankit Patel <ankit@redhat.com>, 2007.
-# Sweta Kothari <swkothar@redhat.com>, 2008.
+# Sweta Kothari <swkothar@redhat.com>, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-07 13:32+0530\n"
+"PO-Revision-Date: 2009-12-07 11:41+0530\n"
 "Last-Translator: Sweta Kothari <swkothar@redhat.com>\n"
 "Language-Team: Gujarati\n"
 "MIME-Version: 1.0\n"
@@ -62,12 +62,12 @@ msgstr ""
 "પરિચલો, અને પરિસ્થિતિઓ માટે તેઓ આ તરીકે લાગુ કરવાનું અનુસરે છે."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "એક જ-જગ્યા થયેલ બોલ્ડ"
+msgstr "<literal>એક જ-જગ્યા થયેલ બોલ્ડ</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
@@ -89,7 +89,7 @@ msgstr ""
 "<keycap>Enter</keycap> દબાવો."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
@@ -98,7 +98,7 @@ msgstr ""
 "સંદર્ભને આભાર આપે છે."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -125,17 +125,18 @@ msgstr ""
 "keycombo> દબાવો."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"પહેલું વાક્ય ચોક્કસ કી કેપને દબાવવા માટે પ્રકાશિત કરેલ છે. બીજુ ત્રણ કી કેપોનાં બે સમૂહોને "
-"પ્રકાશિત કરે છે, દરેક સમૂહ એકસાથે દબાવેલ છે."
+"પહેલું વાક્ય ચોક્કસ કી કૅપને દબાવવા માટે પ્રકાશિત કરેલ છે. બીજુ બે કી સંયોજનોને ે "
+"પ્ર (, દરેક સમૂહ એક"
+"દરેક સમૂહ સાથે ત્રણ કૅપોનો દરેક સમૂહ છે)થે દબાવેલ છે."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -143,7 +144,7 @@ msgid ""
 msgstr ""
 "જો સ્ત્રોત કોડ ચર્ચા કરેલ હોય તો, વર્ગ નામો, પદ્દત્તિઓ, વિધેયો, ચલ નામો અને પાછી મળેલ "
 "કિંમતો પ્રકરણ માં વર્ણન કરેલ છે <literal>એક જ-જગ્યા થયેલ બોલ્ડ</literal> માં ઉપર પ્રમાણે "
-"રજૂ થયેલ હશે. ઉદાહરણ તરીકે: "
+"રજૂ થયેલ હશે. ઉદાહરણ તરીકે:"
 
 #. Tag: para
 #, no-c-format
@@ -160,21 +161,21 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Proportional Bold</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
-"આ સિસ્ટમ પર સૂચક થયેલ શબ્દો અથવા શોધાયેલ શબ્દ સમૂહ છે, કાર્યક્રમ નામો; સંવાદ બોક્સ લખાણ; "
+"આ સિસ્ટમ પર શોધાયેલ શબ્દો અથવા વાક્યોને સૂચવે છે, કાર્યક્રમમૂહ છે, કાર્યક્રમ નામો; સંવાદ બોક્સ લખાણ; "
 "લેબલ થયેલ બટનો; ચેક-બોક્સ અને રેડિઓ બટન લેબલો; મેનુ શિર્ષકો અને ઉપ-મેનુ શિર્ષકોને સમાવી "
 "રહ્યા છે. ઉદાહરણ માટે:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -185,13 +186,14 @@ msgid ""
 "for use in the left hand)."
 msgstr ""
 "<application>માઉસ પસંદગીઓ</application> ને પ્રકાશિત કરવા માટે મુખ્ય મેનુ પટ્ટી માંથી "
-"<guimenu>સિસ્ટમ > પસંદગીઓ > માઉસ</guimenu> ને પસંદ કરો. <guilabel>બટનો</"
+"<menuchoice><guimenu>સિસ્ટમ</guimenu><guisubmenu>પસંદગીઓ</"
+"guisubmenu><guimenuitem>માઉસ</guimenuitem></menuchoice> ને પસંદ કરો. <guilabel>બટનો</"
 "guilabel> ટેબમાં, <guilabel>ડાબા-હાથવાળુ માઉસ</guilabel> ચેક બોક્સ પર ક્લિક કરો અને "
 "ડાબેથી જમણે પ્રાથમિક માઉસ બટનને ફેરબદલ કરવા માટે <guibutton>બંધ કરો</guibutton> પર "
 "ક્લિક કરો (ડાબા હાથમાં વાપરવા માટે માઉસને બંધબેસતુ બનાવી રહ્યા છે)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -208,18 +210,18 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "<application>gedit</application> ફાઇલ માં ચોક્કસ અક્ષર દાખલ કરવા માટે, મુખ્ય મેનુ "
-"પટ્ટીમાંથી <guimenu>કાર્યક્રમો > સહાયક સામગ્રી > અક્ષર નક્ષો</guimenu> ને પસંદ કરો. "
-"પછીનું, <application>અક્ષર નક્ષો</application> મેનુ પટ્ટી માંથી <guimenu>શોધો > "
-"Find&hellip;</guimenu> ને પસંદ કરો, <guilabel>શોધો</guilabel> ક્ષેત્ર માં અક્ષરનું "
-"નામ ટાઇપ કરો અને <guibutton>પછી</guibutton> પર ક્લિક કરો. અક્ષર તમે "
-"<guilabel>અક્ષર ટેબલ</guilabel> માં શોધી કાઢ્યુ છે તે પ્રકાશિત થયેલ છે. ડબલ-ક્લિક આ "
+"પટ્ટીમાંથી <menuchoice><guimenu>કાર્યક્રમો</guimenu><guisubmenu>સહાયક સામગ્રી</"
+"guisubmenu><guimenuitem>અક્ષર નક્ષો</guimenuitem></menuchoice> ને પસંદ કરો. "
+"પછીનું, <application>અક્ષર નક્ષો</application> મેનુ પટ્ટી માંથી <menuchoice><guimenu>શોધો</"
+"guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> ને પસંદ કરો, "
+"<guilabel>શોધો</guilabel> ક્ષેત્ર માં અક્ષરનું નામ ટાઇપ કરો અને <guibutton>પછી</guibutton> "
+"પર ક્લિક કરો. અક્ષર તમે <guilabel>અક્ષર ટેબલ</guilabel> માં શોધી કાઢ્યુ છે તે પ્રકાશિત થયેલ છે. ડબલ-ક્લિક આ "
 "પ્રકાશિત થયેલ અક્ષર <guilabel>નકલ કરવા માટે લખાણ</guilabel> ક્ષેત્રમાં તેને રાખેલ છે અને "
 "<guibutton>નકલ</guibutton> બટન પર ક્લિક કરો. હવે તમારા દસ્તાવેજ પર પાછા ફેરબદલ "
-"કરો અને <application>gedit</application> મેનુ પટ્ટી માંથી <guimenu>ફેરફાર કરો > "
-"ચોંટાડો</guimenu> ને પસંદ કરો."
+"કરો અને <application>gedit</application> મેનુ પટ્ટી માંથી <menuchoice><guimenu>ફેરફાર કરો</guimenu><guimenuitem>ચોંટાડો</guimenuitem></menuchoice> ને પસંદ કરો."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -242,7 +244,7 @@ msgstr ""
 "application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
@@ -250,7 +252,7 @@ msgid ""
 "For example:"
 msgstr ""
 "ક્યાંતો Mono-spaced Bold અથવા Proportional Bold, ઇટાલિકનાં વધારાનાં બદલી શકાય "
-"તેવા અથવા ચલ લખાણનું સૂચન કરે છે. ઇટાલિકો તમે અક્ષરનું ઇનપુટ નથી તે લકાણનું સૂચક કરે છે અથવા "
+"તેવા અથવા ચલ લખાણનું સૂચન કરે છે. ઇટાલિકો તમે અક્ષરનું ઇનપુટ નથી તે લખાણનું સૂચક કરે છે અથવા "
 "લખાણને દર્શાવેલ છે કે જે બદલાવો પરિસ્થિતિઓ પર આધાર રાખે છે. ઉદાહરણ તરીકે:"
 
 #. Tag: para
@@ -301,7 +303,7 @@ msgid ""
 msgstr ""
 "નોંધો કે બોલ્ડ ઇટાલિકમાં ઉપર &mdash; વપરાશકર્તાનામ, domain.name, ફાઇલ-સિસ્ટમ, પેકેજ, "
 "આવૃત્તિ અને પ્રકાશનમાં છે. દરેક શબ્દ એ પ્લેસહોલ્ડર છે, ક્યાં તો જ્યારે આદેશને તમે દાખલ કરી રહ્યા "
-"હોય છે તે લખાણ માટે અથવા સિસ્ટમ દ્દારા દર્શાવેલ વખાણ માટે છે. "
+"હોય છે તે લખાણ માટે અથવા સિસ્ટમ દ્દારા દર્શાવેલ વખાણ માટે છે."
 
 #. Tag: para
 #, no-c-format
@@ -315,7 +317,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican એ <firstterm>DocBook</firstterm> ને પ્રકાશિત કરવા માટેની સિસ્ટમ છે."
 
 #. Tag: title
 #, no-c-format
@@ -323,31 +325,31 @@ msgid "Pull-quote Conventions"
 msgstr "પુલ-કોટ પરિચલો"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"બે, સામાન્ય રીતે ઘણી-લીટી, માહિતી પ્રકારો એ આસપાસનાં લખાણો માંથી દેખાતુ બંધ હોય એવી "
+"ટર્મિનલ આઉટપુટ અને સ્ત્રોત કોડની યાદીઓ એ આસપાસનાં લખાણો માંથી દેખાતુ બંધ હોય એવી "
 "રીતે સુયોજિત કરેલ છે."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"આઉટપુટ ટર્મિનલમાં મોકલેલ <computeroutput>Mono-spaced Roman</computeroutput> માં "
+"આઉટપુટ ટર્મિનલમાં મોકલેલ <computeroutput>mono-spaced roman</computeroutput> માં "
 "સુયોજિત છે અને આ પ્રકારથી પ્રસ્તુત કરેલ છે:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"સ્ત્રોત-કોડ યાદીઓ <computeroutput>Mono-spaced Roman</computeroutput> માં પણ "
-"સુયોજિત છે પરંતુ નીચે પ્રમાણે પ્રકાશિત થયેલ અને રજૂ થયેલ છે:"
+"સ્ત્રોત-કોડ યાદીઓ <computeroutput>mono-spaced roman</computeroutput> માં પણ "
+"સુયોજિત છે પરંતુ નીચે પ્રમાણે પ્રકાશિત કરવા માટે સિન્ટૅક્સ ને ઉમેરોેલ છે:"
 
 #. Tag: title
 #, no-c-format
@@ -369,7 +371,7 @@ msgid "Note"
 msgstr "નોંધ"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -384,7 +386,7 @@ msgid "Important"
 msgstr "મહત્વનું"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -393,7 +395,7 @@ msgid ""
 msgstr ""
 "મહત્વનાં બોક્સો માહિતી વસ્તુઓ જે કે સહેલાઇથી ગુમ થયેલ છે: રૂપરેખાંકન બદલાવો કે જે ફક્ત "
 "તાજેતરનાં સત્ર પર લાગુ કરાય છે, અથવા સેવાઓ કે જે સુધારા લાગુ કરશે તે પહેલા પુન:શરૂ કરવાની "
-"જરૂર પડશે. અવગણેલા મહત્વનાં બોક્સો માહિતી નુકશાનનું કારણ થશે નહિં પરંતુ પજવવું અને હતાશા નું "
+"જરૂર પડશે. અવગણેલા મહત્વનાં લેબલ થયેલ બોક્સો તી નુકશાનનું કારણ થશે નહિં પરંતુ પજવવું અને હતાશા નું "
 "કારણ થઇ શકે છે."
 
 #. Tag: title
@@ -402,94 +404,9 @@ msgid "Warning"
 msgstr "ચેતવણી"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr "ચેતવણી ને અવગણેલ ન હોવી જોઇએ. અવગણેલી ચેતવણીઓ માહિતી નુકશાન નું કારણ થશે."
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "નોંધો કે <guimenu>></guimenu> શોર્ટહેન્ડ એ મેનુ અને તેનાં ઉપ-મેનુઓ મારફતે એક જગ્યાથી "
-#~ "બીજી જગ્યાએ સૂચન કરવા માટે વાપરેલ છે. આ અવગણવા માટે 'મુખ્ય મેનુ પટ્ટીનાં "
-#~ "<guimenu>સિસ્ટમ</guimenu> મેનુ માં <guimenu>પસંદગીઓ</guimenu> ઉપ-મેનુ માંથી "
-#~ "<guimenuitem>માઉસ</guimenuitem> ને પસંદ કરવુ' મુશ્કેલ છે."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "જ્યારે Apache HTTP Server સૂચનોને સ્વીકારે છે, તે બાળક પ્રક્રિયાઓને મોકલી દે છે અથવા "
-#~ "તેઓને સંભાળવા માટે થ્રેડો કરે છે. આ બાળ પ્રક્રિયાઓનું જૂથ અથવા <firstterm>server-pool</"
-#~ "firstterm> તરીકે થ્રેડો જાણીતા છે. Apache HTTP Server 2.0 નીચે, બનાવવા અને "
-#~ "જાળવી રાખવા માટે જવાબદારીઓ મોડ્યુલનાં જૂથમાં બેધ્યાન કરી દેવામાં આવી છે તેને "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>) કહેવાયું છે. ના ગમતા બીજા મોડ્યુલો, ફક્ત એક મોડ્યુલ MPM જૂથમાંથી Apache "
-#~ "HTTP Server દ્દારા લોડ કરી શકાય છે."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "પ્રમાણસરનું બોલ્ડ"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
