JBoss community: pdf.xsl with title colour; plus expanded author credits
git-svn-id: file:///srv/svn/publican/trunk@953 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss-community-hibernate/README
+++ b/publican-jboss-community-hibernate/README
@@ -1,5 +1,6 @@
 Copyright 2009 Red Hat, Inc.
-Author: Rüdiger Landmann <r.landmann@redhat.com>
+Author (graphics and CSS layout): JBoss Visual Design Team 
+Author (mapping to Publican): Rüdiger Landmann <r.landmann@redhat.com>, Ryan Lerch <rlerch@redhat.com>, and Jeff Fearn (jfearn@redhat.com)
 
 Common files and scripts for building JBoss community documentation.
 
