--- a/publican-jboss-community/README
+++ b/publican-jboss-community/README
@@ -1,5 +1,6 @@
 Copyright 2009 Red Hat, Inc.
-Author: Rüdiger Landmann <r.landmann@redhat.com>
+Author (graphics and CSS layout): JBoss Visual Design Team 
+Author (mapping to Publican): Rüdiger Landmann <r.landmann@redhat.com>, Ryan Lerch <rlerch@redhat.com>, and Jeff Fearn (jfearn@redhat.com)
 
 Common files and scripts for building JBoss community documentation.
 
